random placement and correct loop without inputs

--- a/index.html
+++ b/index.html
@@ -12,14 +12,11 @@
 
 <body>
 
-    <div>
-        <h1>Tetris</h1>
-    </div>
+    <div><h1>Tetris</h1></div>
 
     <button id="startGameButton" onclick="startGameFunction()">Start Game</button>
 
-    <div id="tetrisContainerDiv">
-    </div>
+    <div id="tetrisContainerDiv"></div>
 
 </body>
 
