--- a/index.html
+++ b/index.html
@@ -3,20 +3,59 @@
 <html>
 
 <head lang="en">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <script src="script.js"></script>
     <title>Tetris</title>
+
 </head>
 
 <body>
 
-    <div><h1>Tetris</h1></div>
+    <div id="divToBeDeleted">
 
-    <button id="startGameButton" onclick="startGameFunction()">Start Game</button>
+        <div class="genericDiv" id="titleDiv">
+            <h1>Tretris</h1>
+        </div>
 
-    <div id="tetrisContainerDiv"></div>
+        <div class="genericDiv" id="announceDiv">
+            <h2 id="startAndEndH2">Let's play generic block puzzle game!</h2>
+            <h4 id="startAndEndH4">Use arrow keys or 'w a s d'
+                to control your pieces!</h4>
+            <ul id="startAndEndUL">
+                <li>Left and down: <strong>'a'</strong>, <strong>'←'</strong>;
+                <li>Right and down: <strong>'d'</strong>, <strong>'→'</strong>;
+                <li>Two times down: <strong>'s'</strong>, <strong>'↓'</strong>;
+                <li>Rotate and down: <strong>'w'</strong>, <strong>'↑'</strong>;   
+            </ul>
+            <h5 id="startAndEndH5">** Note that with some browser
+                extensions some keys might not work properly</h5>
+        </div>
+
+        <button id="startGameButton" onclick="startGameFunction()">
+        Start Game</button>
+
+    </div>
+
+
+    <div class="genericDiv" id="statusAndGameContainerDiv">
+
+        <div id="tetrisContainerDiv"></div>
+
+        <div id="statusDiv">
+            <h1>Pieces</h1>
+            <h1 id="pieces"></h1>
+            <hr>
+            <h1>Points</h1>
+            <h1 id="points"></h1>
+            <hr>
+            <h1>Timer</h1>
+            <h1 id="timer">0</h1>
+        </div>
+
+    </div>
 
 </body>
 
