--- a/index.html
+++ b/index.html
@@ -14,50 +14,50 @@
 
 <body>
 
-    <div id="divToBeDeleted">
+<div id="divToBeDeleted">
 
-        <div class="genericDiv" id="titleDiv">
-            <h1>Tretris</h1>
-        </div>
+    <div class="genericDiv" id="titleDiv">
+        <h1>Tretris</h1>
+    </div>
 
-        <div class="genericDiv" id="announceDiv">
+    <div class="genericDiv" id="announceDiv">
 
-            <h2 id="startAndEndH2">Let's play generic block puzzle game!</h2>
-            <h4 id="startAndEndH4">Use arrow keys or 'w a s d'
-                to control your pieces!</h4>
-            <ul id="startAndEndUL">
-                <li>Left and down: <strong>'a'</strong>, <strong>'←'</strong>;
-                <li>Right and down: <strong>'d'</strong>, <strong>'→'</strong>;
-                <li>Two times down: <strong>'s'</strong>, <strong>'↓'</strong>;
-                <li>Rotate and down: <strong>'w'</strong>, <strong>'↑'</strong>;   
-            </ul>
-            <h5 id="startAndEndH5">** Note that with some browser
-                extensions some keys might not work properly</h5>
-
-        </div>
-
-        <button id="startGameButton" onclick="startGameFunction()">
-        Start Game</button>
+        <h2 id="startAndEndH2">Let's play generic block puzzle game!</h2>
+        <h4 id="startAndEndH4">Use arrow keys or 'w a s d'
+            to control your pieces!</h4>
+        <ul id="startAndEndUL">
+            <li>Left and down: <strong>'a'</strong>, <strong>'←'</strong>;</li>
+            <li>Right and down: <strong>'d'</strong>, <strong>'→'</strong>;</li>
+            <li>Two times down: <strong>'s'</strong>, <strong>'↓'</strong>;</li>
+            <li>Rotate and down: <strong>'w'</strong>, <strong>'↑'</strong>;</li> 
+        </ul>
+        <h5 id="startAndEndH5">** Note that with some browser
+            extensions some keys might not work properly</h5>
 
     </div>
 
+    <button id="startGameButton" onclick="startGameFunction()">
+    Start Game</button>
 
-    <div class="genericDiv" id="statusAndGameContainerDiv">
+</div>
 
-        <div id="tetrisContainerDiv"></div>
 
-        <div id="statusDiv">
-            <h1>Pieces</h1>
-            <h1 id="pieces"></h1>
-            <hr>
-            <h1>Points</h1>
-            <h1 id="points"></h1>
-            <hr>
-            <h1>Timer</h1>
-            <h1 id="timer">0</h1>
-        </div>
+<div class="genericDiv" id="statusAndGameContainerDiv">
 
+    <div id="tetrisContainerDiv"></div>
+
+    <div id="statusDiv">
+        <h1>Pieces</h1>
+        <h1 id="pieces"></h1>
+        <hr>
+        <h1>Points</h1>
+        <h1 id="points"></h1>
+        <hr>
+        <h1>Timer</h1>
+        <h1 id="timer">0</h1>
     </div>
+
+</div>
 
 </body>
 
